# colcon-ros

./: .travis.yml  README.rst  appveyor.yml  run_integration_test.sh  setup.cfg  setup.py  stdeb.cfg  tox.ini
.github/workflows/: ci.yaml
colcon_ros/: installed_packages.py
colcon_ros/argcomplete_completer/: catkin_cmake_args.py
colcon_ros/package_augmentation/: ros_ament_python.py
colcon_ros/package_identification/: ignore.py  ros.py
colcon_ros/prefix_path/: ament.py  catkin.py
colcon_ros/task/: __init__.py  ros.py
colcon_ros/task/ament_cmake/: build.py  test.py
colcon_ros/task/ament_python/: build.py  test.py
colcon_ros/task/catkin/: __init__.py  build.py  test.py
colcon_ros/task/cmake/: __init__.py  build.py  test.py
colcon_ros/task/ros_gradle/: build.py  test.py
debian/patches/: setup.cfg.patch
integration/test_workspace/src/test-cmake/: CMakeLists.txt
integration/test_workspace/src/test-cmake-deps/: CMakeLists.txt  package.xml
integration/test_workspace/src/test-nodes/: CMakeLists.txt
integration/test_workspace/src/test-nodes-deps/: CMakeLists.txt  package.xml
test/: spell_check.words  test_ament_index_augmentation.py  test_dependency_metadata.py  test_flake8.py  test_package_identification_ros.py  test_spell_check.py
