[metadata]
name = colcon-ros
version = attr: colcon_ros.__version__
url = https://colcon.github.io
download_url = https://github.com/colcon/colcon-ros/releases
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support ROS packages.
keywords = colcon

[options]
install_requires =
  # the catkin_pkg dependency is commented out because of the following reason:
  # on a system with ROS 1 python-catkin-pkg and python-catkin-pkg-modules are
  # commonly installed
  # therefore only python3-catkin-pkg-modules can be installed since
  # python3-catkin-pkg is not side-by-side installable
  # this dependency would require catkin_pkg to be resolvable via pkg_resources
  # with Python 3 which is not the case in that situation
  # catkin_pkg
  colcon-cmake
  colcon-core
  colcon-python-setup-py
packages = find:
tests_require =
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    catkin_cmake_args = colcon_ros.argcomplete_completer.catkin_cmake_args:CatkinCmakeArgcompleteCompleter
colcon_core.package_augmentation =
    ros = colcon_ros.package_identification.ros:RosPackageIdentification
colcon_core.package_identification =
    ignore_ament_install = colcon_ros.package_identification.ignore:IgnorePackageIdentification
    ros = colcon_ros.package_identification.ros:RosPackageIdentification
colcon_core.task.build =
    ros = colcon_ros.task.ros:RosTask
colcon_core.task.test =
    ros = colcon_ros.task.ros:RosTask
