[metadata]
name = colcon-ros
version = attr: colcon_ros.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-ros/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-ros/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support ROS packages.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  catkin_pkg
  colcon-cmake>=0.2.0
  colcon-core>=0.2.0
  colcon-python-setup-py
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  # working around a pkg_resources.ContextualVersionConflict
  # by installing a specific version of pycodestyle
  # flake8-import-order depends on pycodestyle without a version range
  # flake8 depends on a pycodestyle but with a restricted version range
  pycodestyle==2.3.1
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    catkin_cmake_args = colcon_ros.argcomplete_completer.catkin_cmake_args:CatkinCmakeArgcompleteCompleter
colcon_core.package_augmentation =
    ros = colcon_ros.package_identification.ros:RosPackageIdentification
colcon_core.package_identification =
    ignore_ament_install = colcon_ros.package_identification.ignore:IgnorePackageIdentification
    ros = colcon_ros.package_identification.ros:RosPackageIdentification
colcon_core.task.build =
    ros = colcon_ros.task.ros:RosTask
colcon_core.task.test =
    ros = colcon_ros.task.ros:RosTask
