[metadata]
name = colcon-ros
version = attr: colcon_ros.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-ros/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-ros/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support ROS packages.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  catkin_pkg>=0.4.14
  colcon-cmake>=0.2.6
  colcon-core>=0.5.3
  # technically not a required dependency but "very common" for ROS 1 users
  colcon-pkg-config
  colcon-python-setup-py>=0.2.4
  # technically not a required dependency but "very common" for ROS users
  colcon-recursive-crawl
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
    ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning
    ignore:the imp module is deprecated in favour of importlib.*:PendingDeprecationWarning
junit_suite_name = colcon-ros

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    catkin_cmake_args = colcon_ros.argcomplete_completer.catkin_cmake_args:CatkinCmakeArgcompleteCompleter
colcon_core.package_augmentation =
    ros = colcon_ros.package_identification.ros:RosPackageIdentification
colcon_core.package_identification =
    ignore_ament_install = colcon_ros.package_identification.ignore:IgnorePackageIdentification
    ros = colcon_ros.package_identification.ros:RosPackageIdentification
colcon_core.prefix_path =
    ament = colcon_ros.prefix_path.ament:AmentPrefixPath
    catkin = colcon_ros.prefix_path.catkin:CmakePrefixPath
colcon_core.task.build =
    ros.ament_cmake = colcon_ros.task.ament_cmake.build:AmentCmakeBuildTask
    ros.ament_python = colcon_ros.task.ament_python.build:AmentPythonBuildTask
    ros.catkin = colcon_ros.task.catkin.build:CatkinBuildTask
    ros.cmake = colcon_ros.task.cmake.build:CmakeBuildTask
colcon_core.task.test =
    ros.ament_cmake = colcon_ros.task.ament_cmake.test:AmentCmakeTestTask
    ros.ament_python = colcon_ros.task.ament_python.test:AmentPythonTestTask
    ros.catkin = colcon_ros.task.catkin.test:CatkinTestTask
    ros.cmake = colcon_ros.task.cmake.test:CmakeTestTask

[flake8]
import-order-style = google

[coverage:run]
source = colcon_ros
